# django-db-settings

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
settings/: admin.py  business.py  models.py  urls.py  views.py
settings/migrations/: 0001_initial.py
settings/static/settings/: settings.css
settings/templates/settings/: change_list_template.html  view_all_template.html
