[metadata]
name = django-db-settings
version = 1.0.1
description = A Django app to save app settings in DB as classes.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/oscargdi
author = Oscar Diaz
author_email = oscargdi22@gmail.com
license = GNU General Public License v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >3
install_requires =
    django
    cachetools